Closed
Bug 808294
Opened 13 years ago
Closed 13 years ago
Fix tracelogger builds after yarr update
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: h4writer, Assigned: h4writer)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.34 KB,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
Since the yarr update the tracelogger builds won't build anymore:
In file included from ../vm/RegExpObject.h:21:0,
from ../jscompartment.h:21,
from /home/h4writer/Build/mozilla-inbound/js/src/ion/Ion.h:12,
from /home/h4writer/Build/mozilla-inbound/js/src/jscntxt.cpp:45:
../yarr/YarrJIT.h: In member function ‘MatchResult JSC::Yarr::YarrCodeBlock::execute(const UChar*, unsigned int, unsigned int, int*)’:
../yarr/YarrJIT.h:129:33: error: ‘YARR_JIT_START’ is not a member of ‘js::TraceLogging’
../yarr/YarrJIT.h:130:33: error: ‘YARR_JIT_STOP’ is not a member of ‘js::TraceLogging’
../yarr/YarrJIT.h: In member function ‘MatchResult JSC::Yarr::YarrCodeBlock::execute(const UChar*, unsigned int, unsigned int)’:
../yarr/YarrJIT.h:143:33: error: ‘YARR_JIT_START’ is not a member of ‘js::TraceLogging’
../yarr/YarrJIT.h:144:33: error: ‘YARR_JIT_STOP’ is not a member of ‘js::TraceLogging’
| Assignee | ||
Updated•13 years ago
|
Attachment #678013 -
Attachment is patch: true
Attachment #678013 -
Flags: review?(dvander)
| Assignee | ||
Comment 1•13 years ago
|
||
Forgot to qref
Assignee: general → hv1989
Attachment #678013 -
Attachment is obsolete: true
Attachment #678013 -
Flags: review?(dvander)
Attachment #678017 -
Flags: review?(dvander)
Updated•13 years ago
|
Attachment #678017 -
Flags: review?(dvander) → review+
| Assignee | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in
before you can comment on or make changes to this bug.
Description
•