Bug 808294: Fix tracelogger builds, r=dvander